# swagger_server/swagger/swagger.yaml
@@ -25,8 +25,7 @@ paths:
         style: simple
         explode: false
         schema:
-          type: number
-          format: integer
+          type: string
       responses:
         "200":
           description: Successful operation
@@ -52,17 +51,14 @@ paths:
         style: simple
         explode: false
         schema:
-          type: number
-          format: integer
+          type: string
       responses:
         "200":
           description: Successful operation
           content:
             application/json:
               schema:
-                type: object
-                format: Student
-                x-content-type: application/json
+                $ref: '#/components/schemas/Student'
         "400":
           description: Bad Request
         "404":
@@ -102,9 +98,8 @@ components:
       type: object
       properties:
         student_id:
-          type: number
-          format: integer
-          example: 1203
+          type: string
+          example: "1203"
         first_name:
           type: string
           example: Auke
@@ -116,7 +111,7 @@ components:
           items:
             $ref: '#/components/schemas/GradeRecord'
       example:
-        student_id: 1203
+        student_id: "1203"
         last_name: Smith
         grade_records:
         - grade: 3.5
